// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query insight attributes meta should return metadata for insight with attribute filter 1`] = `
Object {
  "attributes": Array [
    Object {
      "deprecated": false,
      "description": "",
      "id": "attr.product.id",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "title": "Product",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1054",
    },
  ],
  "displayForms": Array [
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "deprecated": false,
      "description": "",
      "id": "label.product.id.name",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "title": "Product Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
  ],
  "usage": Object {
    "inAttributes": Array [
      Object {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
    ],
    "inFilters": Array [
      Object {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
    ],
    "inMeasureFilters": Array [],
  },
}
`;

exports[`query insight attributes meta should return metadata for insight with date attributes in buckets 1`] = `
Object {
  "attributes": Array [
    Object {
      "deprecated": false,
      "description": "Year",
      "displayForms": Array [
        Object {
          "attribute": Object {
            "uri": "/gdc/md/referenceworkspace/obj/497",
          },
          "deprecated": false,
          "description": "DisplayForm Year.",
          "id": "closed.aag81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/515",
          },
          "title": "Year (Closed)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/515",
        },
      ],
      "drillDownStep": Object {
        "uri": "/gdc/md/referenceworkspace/obj/547",
      },
      "id": "closed.year",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/497",
      },
      "title": "Year (Closed)",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/497",
    },
    Object {
      "deprecated": false,
      "description": "Year",
      "displayForms": Array [
        Object {
          "attribute": Object {
            "uri": "/gdc/md/referenceworkspace/obj/332",
          },
          "deprecated": false,
          "description": "DisplayForm Year.",
          "id": "created.aag81lMifn6q",
          "production": true,
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/350",
          },
          "title": "Year (Created)",
          "type": "displayForm",
          "unlisted": false,
          "uri": "/gdc/md/referenceworkspace/obj/350",
        },
      ],
      "drillDownStep": Object {
        "uri": "/gdc/md/referenceworkspace/obj/382",
      },
      "id": "created.year",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/332",
      },
      "title": "Year (Created)",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/332",
    },
  ],
  "displayForms": Array [
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/497",
      },
      "deprecated": false,
      "description": "DisplayForm Year.",
      "id": "closed.aag81lMifn6q",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/515",
      },
      "title": "Year (Closed)",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/515",
    },
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/332",
      },
      "deprecated": false,
      "description": "DisplayForm Year.",
      "id": "created.aag81lMifn6q",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/350",
      },
      "title": "Year (Created)",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/350",
    },
  ],
  "usage": Object {
    "inAttributes": Array [
      Object {
        "identifier": "closed.aag81lMifn6q",
        "type": "displayForm",
      },
      Object {
        "identifier": "created.aag81lMifn6q",
        "type": "displayForm",
      },
    ],
    "inFilters": Array [],
    "inMeasureFilters": Array [],
  },
}
`;

exports[`query insight attributes meta should return metadata for insight with multiple attributes in buckets 1`] = `
Object {
  "attributes": Array [
    Object {
      "deprecated": false,
      "description": "",
      "id": "attr.product.id",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "title": "Product",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1054",
    },
    Object {
      "deprecated": false,
      "description": "",
      "id": "attr.owner.department",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1088",
      },
      "title": "Department",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1088",
    },
    Object {
      "deprecated": false,
      "description": "",
      "id": "attr.stage.name",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1091",
      },
      "title": "Stage Name",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1091",
    },
    Object {
      "deprecated": false,
      "description": "",
      "id": "attr.owner.region",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "title": "Region",
      "type": "attribute",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1086",
    },
  ],
  "displayForms": Array [
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "deprecated": false,
      "description": "",
      "id": "label.product.id.name",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "title": "Product Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1088",
      },
      "deprecated": false,
      "description": "",
      "id": "label.owner.department",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "title": "Department",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1089",
    },
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1091",
      },
      "deprecated": false,
      "description": "",
      "id": "label.stage.name.stagename",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1092",
      },
      "title": "Stage Name",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1092",
    },
    Object {
      "attribute": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "deprecated": false,
      "description": "",
      "id": "label.owner.region",
      "production": true,
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "title": "Region",
      "type": "displayForm",
      "unlisted": false,
      "uri": "/gdc/md/referenceworkspace/obj/1087",
    },
  ],
  "usage": Object {
    "inAttributes": Array [
      Object {
        "identifier": "label.product.id.name",
        "type": "displayForm",
      },
      Object {
        "identifier": "label.owner.department",
        "type": "displayForm",
      },
      Object {
        "identifier": "label.stage.name.stagename",
        "type": "displayForm",
      },
      Object {
        "identifier": "label.owner.region",
        "type": "displayForm",
      },
    ],
    "inFilters": Array [],
    "inMeasureFilters": Array [],
  },
}
`;
